--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header{
-    width: 100vw;
+    max-width: 100%;
     height: 100px;
     background: #ab2a19;
     text-align: left;
@@ -8,7 +8,7 @@
     align-items: center;
 }
 .logo{
-    margin: 16px 0;
+    margin: 16px 0 16px 50px;
 }
 .shelfie-text{
     padding-left: 50px;
